microservices-demo/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: backend
        image: srayudu/ms-demorepo:backend-2c9dc02
        ports:
        - containerPort: 5000
