microservices-demo/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: frontend
          image: srayudu/ms-demorepo:frontend-0a5b5f9
          ports:
            - containerPort: 3000
